atribuindo variável correta

--- a/worlds2021.ipynb
+++ b/worlds2021.ipynb
@@ -3175,7 +3175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3289,7 +3289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A exploração de dados pode ir a fundo em inúmeros outros pontos desse conjunto, durante essa breve passagem meu próposito foi dar uma visão geral e apresentar possibilidades a partir dos dados dE jogos do campeonato mundial de LOL."
+    "A exploração de dados pode ir a fundo em inúmeros outros pontos desse conjunto, durante essa breve passagem meu próposito foi dar uma visão geral e apresentar possibilidades a partir dos dados de jogos do campeonato mundial de LOL."
    ]
   }
  ],
