--- a/script/worlds2021.ipynb
+++ b/script/worlds2021.ipynb
@@ -3175,18 +3175,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'index'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7088/4226025230.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mpercentual_maior\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mpercentual_menor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'index'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DWG KIA [29.41, 37.03, 32.27, 29.56, 37.29, 38.58] maior 100.0 menor 50.0\n",
+      "\n",
+      "FunPlus Phoenix [29.41, 36.44, 34.25, 29.56, 28.14, 40.57] maior 100.0 menor 50.0\n",
+      "\n",
+      "RNG [37.26, 30.5, 40.25, 37.31, 32.23, 36.12] maior 100.0 menor 33.0\n",
+      "\n",
+      "PSG Talon [37.26, 38.06, 46.11, 29.59, 32.23, 36.36] maior 100.0 menor 33.0\n",
+      "\n",
+      "Hanwha Life [31.42, 38.06, 40.25, 29.59, 43.15, 36.12] maior 100.0 menor 33.0\n",
+      "\n",
+      "Fnatic [31.42, 30.5, 46.11, 37.31, 43.15, 36.36] maior 100.0 menor 33.0\n",
+      "\n",
+      "LNG Esports [23.42, 29.06, 26.27, 30.13, 34.34, 31.22] maior 67.0 menor 83.0\n",
+      "\n",
+      "Gen.G [23.42, 46.59, 38.29, 39.45, 34.34, 35.03] maior 83.0 menor 17.0\n",
+      "\n",
+      "T1 [19.53, 36.49, 29.5, 31.46, 25.5, 27.02] maior 50.0 menor 83.0\n",
+      "\n",
+      "DetonatioN FM [19.53, 33.07, 32.0, 25.54, 49.21, 27.02] maior 50.0 menor 83.0\n",
+      "\n",
+      "EDward Gaming [28.31, 36.49, 32.0, 25.54, 25.5, 35.33] maior 67.0 menor 67.0\n",
+      "\n",
+      "100 Thieves [28.31, 33.07, 29.5, 31.46, 49.21, 35.33] maior 100.0 menor 67.0\n",
+      "\n",
+      "Team Liquid [27.08, 29.06, 38.29, 30.13, 37.14, 35.03] maior 83.0 menor 50.0\n",
+      "\n",
+      "MAD Lions [27.08, 46.59, 26.27, 39.45, 37.14, 31.22] maior 67.0 menor 50.0\n",
+      "\n",
+      "Rogue [32.34, 37.03, 34.25, 25.23, 37.29, 40.57] maior 83.0 menor 33.0\n",
+      "\n",
+      "Cloud9 [32.34, 36.44, 32.27, 25.23, 28.14, 38.58] maior 83.0 menor 67.0\n",
+      "\n"
      ]
     }
    ],
@@ -3194,7 +3221,7 @@
     "# Histórico de tempo dos jogos e Percentual dos jogos que foram finalizados depois de 27.5 minutos e antes de 33.5 minutos\n",
     "import numpy as np\n",
     "\n",
-    "for x in d.index.unique():\n",
+    "for x in df.index.unique():\n",
     "    percentual_maior = 0\n",
     "    percentual_menor = 0\n",
     "    tempo1 = []\n",
@@ -3207,7 +3234,7 @@
     "                percentual_menor +=1\n",
     "\n",
     "        elif i % 2 == 1 and df.index[i] == x:\n",
-    "            tempo1.extend(d[i:i+1].tempo.values)\n",
+    "            tempo1.extend(df[i:i+1].tempo.values)\n",
     "            if df[i:i+1].tempo.values > 27.5:\n",
     "                percentual_maior +=1\n",
     "            if df[i:i+1].tempo.values < 33.5:\n",
@@ -3221,11 +3248,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.67 83.33\n",
+      "50.0 50.0\n",
+      "50.0 50.0\n",
+      "50.0 50.0\n",
+      "33.33 66.67\n",
+      "16.67 83.33\n",
+      "50.0 50.0\n",
+      "50.0 50.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Percentual de barons por dia de campeonato\n",
     "porcentagens = []\n",
@@ -3247,7 +3289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A exploração de dados pode ir a fundo em inúmeros outros pontos desse conjunto, durante essa breve passagem meu próposito foi dar uma visão geral e apresentar possibilidades a partir dos dados dE jogos do campeonato mundial de LOL."
+    "A exploração de dados pode ir a fundo em inúmeros outros pontos desse conjunto, durante essa breve passagem meu próposito foi dar uma visão geral e apresentar possibilidades a partir dos dados de jogos do campeonato mundial de LOL."
    ]
   }
  ],
